objects/AQI_Audit__c.object
<CustomObject>
    <fields>
        <fullName>AQI_Score__c</fullName>
        <formula>(IF( TEXT(Answer_1__c) = &apos;No&apos; ,3 , 0) +  
IF( TEXT(Answer_2__c) = &apos;Yes&apos; ,1 , 0) +
IF( TEXT(Answer_3__c) = &apos;Yes&apos; ,2 , 0) +
IF( TEXT(Answer_4__c) = &apos;Yes&apos; ,1 , 0) +
IF( TEXT(Answer_5__c) = &apos;Yes&apos; ,1 , 0) +
IF( TEXT(Answer_6__c) = &apos;Yes&apos; ,2 , 0) +
IF( TEXT(Answer_7__c) = &apos;Yes&apos; ,2 , 0) )/12</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AQI Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Answer_1__c</fullName>
        <label>Answer 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_2__c</fullName>
        <label>Answer 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_3__c</fullName>
        <label>Answer 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Article_ID__c , Article_Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Author</label>
        <referenceTo>User</referenceTo>
        <relationshipName>UserAQIs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coach__c</fullName>
        <formula>Owner:User.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Coach</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Question_1__c</fullName>
        <defaultValue>&apos;Does different article exist?&apos; &amp; BR() &amp; &apos; (Search to see if a different article exists that has the solution.)&apos;</defaultValue>
        <label>Question 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_2__c</fullName>
        <defaultValue>&apos;Title reflects article content?&apos; &amp; BR() &amp; &apos;(Does the title represent what the article is about?)&apos;</defaultValue>
        <label>Question 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Question_3__c</fullName>
        <defaultValue>&apos;Accurate and Up to Date?&apos; &amp; BR() &amp; &apos;(In your opinion, does the article contain accurate and up-to-date information?)&apos;</defaultValue>
        <label>Question 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>AQI Audit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AQI-{0000}</displayFormat>
        <label>AQI  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AQI Audits</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>